# zad3

./: .gitignore  CMakeLists.txt  main.cpp
app/: main.cpp
src/: CMakeLists.txt  client.cpp  client.hpp
tests/: test_client.cpp
